--- a/index.html
+++ b/index.html
@@ -226,11 +226,16 @@
 								</ul>
 							</li>
 							<li><a href="eb.html">Secretariat</a></li>
-							<li><a href="credits.html">Credits</a></li>
-							<li><a href="#">Delegate Handbook</a></li>
-							<li><a href="#">Background Guides</a></li>
-							<li><a href="#">Matrix</a></li>
+							<li>
+								<a href="#">Delegate Materials</a>
+								<ul>
+									<li><a href="#">Delegate Handbook</a></li>
+									<li><a href="#">Background Guides</a></li>
+									<li><a href="#">Matrix</a></li>
+								</ul>
+							</li>
 							<li><a href="contactus.html">Contact Us</a></li>
+							<li><a href="credits.html">Credits</a></li>
 							<li><a href="#" class="button primary">REGISTRATION</a></li>
 						</ul>
 					</nav>
@@ -440,23 +445,15 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>8:30 am - 10:30 am</td>
+												<td>8:30 am - 11:00 am</td>
 												<td>Session 7</td>
 											</tr>
 											<tr>
-												<td>10:30 am - 10:45 am</td>
+												<td>11:00 am - 11:30 am</td>
 												<td>Break</td>
 											</tr>
 											<tr>
-												<td>10:45 am - 1:00 pm</td>
-												<td>Session 8</td>
-											</tr>
-											<tr>
-												<td> 1:00 pm - 2:00 pm</td>
-												<td>Lunch</td>
-											</tr>
-											<tr>
-												<td> 2:00 pm - 3:00 pm</td>
+												<td>11:30 am - 12:15 pm</td>
 												<td>Closing Ceremony</td>
 											</tr>
 										</tbody>
