--- a/credits.html
+++ b/credits.html
@@ -20,27 +20,32 @@
             <header id="header">
                 <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
                 <nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Committees</a>
-								<ul>
-									<li><a href="unem.html">UNEM </a></li>
-									<li><a href="unhrc.html">UNHRC</a></li>
-									<li><a href="aippm.html">AIPPM</a></li>
-									<li><a href="fcc.html">FCC</a></li>
-									<li><a href="ipc.html">IPC</a></li>
-								</ul>
-							</li>
-							<li><a href="eb.html">Secretariat</a></li>
-							<li><a href="credits.html">Credits</a></li>
-							<li><a href="#">Delegate Handbook</a></li>
-							<li><a href="#">Background Guides</a></li>
-							<li><a href="#">Matrix</a></li>
-							<li><a href="contactus.html">Contact Us</a></li>
-							<li><a href="#" class="button primary">REGISTRATION</a></li>
-						</ul>
-					</nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li>
+							<a href="#">Committees</a>
+							<ul>
+								<li><a href="unem.html">UNEM </a></li>
+								<li><a href="unhrc.html">UNHRC</a></li>
+								<li><a href="aippm.html">AIPPM</a></li>
+								<li><a href="fcc.html">FCC</a></li>
+								<li><a href="ipc.html">IPC</a></li>
+							</ul>
+						</li>
+						<li><a href="eb.html">Secretariat</a></li>
+						<li>
+							<a href="#">Delegate Materials</a>
+							<ul>
+								<li><a href="#">Delegate Handbook</a></li>
+								<li><a href="#">Background Guides</a></li>
+								<li><a href="#">Matrix</a></li>
+							</ul>
+						</li>
+						<li><a href="contactus.html">Contact Us</a></li>
+						<li><a href="credits.html">Credits</a></li>
+						<li><a href="#" class="button primary">REGISTRATION</a></li>
+					</ul>
+				</nav>
             </header>
 
 			<!-- Main -->
@@ -81,7 +86,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/aniii.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/aniii copy 2.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
