--- a/eb.html
+++ b/eb.html
@@ -20,27 +20,32 @@
             <header id="header">
                 <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
                 <nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Committees</a>
-								<ul>
-									<li><a href="unem.html">UNEM </a></li>
-									<li><a href="unhrc.html">UNHRC</a></li>
-									<li><a href="aippm.html">AIPPM</a></li>
-									<li><a href="fcc.html">FCC</a></li>
-									<li><a href="ipc.html">IPC</a></li>
-								</ul>
-							</li>
-							<li><a href="eb.html">Secretariat</a></li>
-							<li><a href="credits.html">Credits</a></li>
-							<li><a href="#">Delegate Handbook</a></li>
-							<li><a href="#">Background Guides</a></li>
-							<li><a href="#">Matrix</a></li>
-							<li><a href="contactus.html">Contact Us</a></li>
-							<li><a href="#" class="button primary">REGISTRATION</a></li>
-						</ul>
-					</nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li>
+							<a href="#">Committees</a>
+							<ul>
+								<li><a href="unem.html">UNEM </a></li>
+								<li><a href="unhrc.html">UNHRC</a></li>
+								<li><a href="aippm.html">AIPPM</a></li>
+								<li><a href="fcc.html">FCC</a></li>
+								<li><a href="ipc.html">IPC</a></li>
+							</ul>
+						</li>
+						<li><a href="eb.html">Secretariat</a></li>
+						<li>
+							<a href="#">Delegate Materials</a>
+							<ul>
+								<li><a href="#">Delegate Handbook</a></li>
+								<li><a href="#">Background Guides</a></li>
+								<li><a href="#">Matrix</a></li>
+							</ul>
+						</li>
+						<li><a href="contactus.html">Contact Us</a></li>
+						<li><a href="credits.html">Credits</a></li>
+						<li><a href="#" class="button primary">REGISTRATION</a></li>
+					</ul>
+				</nav>
             </header>
 
 			<!-- Main -->
@@ -126,7 +131,7 @@
 									</a>
 		
 								</article>
-								<article>
+								<!--<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/ara.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
@@ -137,7 +142,7 @@
 										</div>
 									</a>
 		
-								</article>
+								</article> -->
 								
 								
 							</section>
