--- a/unhrc.html
+++ b/unhrc.html
@@ -33,11 +33,16 @@
 							</ul>
 						</li>
 						<li><a href="eb.html">Secretariat</a></li>
-						<li><a href="credits.html">Credits</a></li>
-						<li><a href="#">Delegate Handbook</a></li>
-						<li><a href="#">Background Guides</a></li>
-						<li><a href="#">Matrix</a></li>
+						<li>
+							<a href="#">Delegate Materials</a>
+							<ul>
+								<li><a href="#">Delegate Handbook</a></li>
+								<li><a href="#">Background Guides</a></li>
+								<li><a href="#">Matrix</a></li>
+							</ul>
+						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
+						<li><a href="credits.html">Credits</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
