--- a/fcc.html
+++ b/fcc.html
@@ -93,7 +93,7 @@ and the growing influence of private individuals on politics?
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/neha.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
 									<p style = "font: 2em perpetua; color:white" >Neha Hemadri</p> 
