--- a/fcc.html
+++ b/fcc.html
@@ -119,7 +119,7 @@ and the growing influence of private individuals on politics?
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/nikil.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
 										<p style = "font: 2em perpetua; color:white">Nikhil Atreya</p> 
