--- a/aippm.html
+++ b/aippm.html
@@ -61,10 +61,10 @@
 								<div style="text-align: center;">
 									<h2>All India Political Parties Meet</h2>
 					<p style="font-size: 1.25em">
-						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
+						<b>“I have come to this conclusion that there is only one country in the world which understands religion - It is India”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Bernard Baruch.</b>
+						<b>-Swami Vivekananda</b>
 					</p>
 					<p style="font-size: 1.15em">
 						The driving force behind the glory of the nation we call Bharat is an idea. An idea that has existed for
