--- a/fcc.html
+++ b/fcc.html
@@ -61,25 +61,24 @@
 								<div style="text-align: center;">
 									<h2 style="font: perpetua">Futuristic Crisis Committee</h2>
 					<p style="font: 1.25em perpetua">
-						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
+						<b>"It is not heroes that make history but history that makes heroes"</b>
 					</p>
 					<p style="font: 1.25em perpetua;">
 
-						<b>-Bernard Baruch.</b>
+						<b>-Stalin</b>
 					</p>
 					<p style="font: 1.15em perpetua">
-						A committee consisting of the most substantial powers in the past decade come together in 2035 to address
+						A committee consisting of the most substantial powers in the past two decades come together in 2040 to address
 the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need
-to put aside their post-war differences after a decade of global political unrest, will the countries find the
-strength to unite when faced with the consequences of the dark side of science, privatization of government
-and the growing influence of private individuals on politics?
+to put aside their post-war differences after years of global political unrest, will the countries find the
+strength to unite when faced with the consequences of the dark side of science?
 </p>
 					<header class="major">
 						</header>
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						To revisit the role of bio-weaponry in the given socio-political climate to tackle an open threat to humanity
+						Bio-weaponry in the new socio-political climate
 					</p>
 
 								</div>
