--- a/ipc.html
+++ b/ipc.html
@@ -61,10 +61,10 @@
 								<div style="text-align: center;">
 									<h2>International Press Corps</h2>
 					<p style="font-size: 1.25em">
-						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
+						<b>“The First Law of Journalism: to confirm existing prejudice, rather than contradict it”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Bernard Baruch.</b>
+						<b>-Alexander Cockburn</b>
 					</p>
 					<p style="font-size: 1.15em">
 						The international press committee is designed to represent journalists and the media. The IPC's agenda for
@@ -91,7 +91,7 @@ topic of censorship and bias.
 								<img src="./images/abhishek.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">HEAD OF PRESS</h1>
-									<p style = "font: 2em perpetua;; color:white">Abhishekh S</p> 
+									<p style = "font: 2em perpetua;; color:white">Abhishek S</p> 
 								</p>
 							</div>
 						</a>
