--- a/unhrc.html
+++ b/unhrc.html
@@ -61,7 +61,7 @@
 								<div style="text-align: center;">
 									<h2>United Nations Human Rights Council</h2>
 					<p style="font-size: 1.25em">
-						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
+						<b>“Victims deserve justice, peace requires justice”</b>
 					</p>
 					<p style="font-size: 1.25em;">
 						<b>-Bernard Baruch.</b>
@@ -106,7 +106,7 @@ equitable, just and sustainable society
 									<img src="./images/muktha.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white"> CO-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Mukta</p> 
+										<p style="font: 2em perpetua; color: white;">Mukta G</p> 
 									</p>
 								</div>
 							</a>
