Finished all quotes

--- a/unem.html
+++ b/unem.html
@@ -61,10 +61,10 @@
 								<div style="text-align: center;">
 									<h2>United Nations Emergency Meeting</h2>
 					<p style="font-size: 1.25em">
-						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
+						<b>“The World will not be destroyed by those who do evil, but by those who watch them without doing anything”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Bernard Baruch.</b>
+						<b>-Albert Einstein</b>
 					</p>
 					<p style="font-size: 1.15em">
 Subsequent to the Russian military attack on Ukraine on the 24th of February 2022, the conflict has grown
