--- a/unhrc.html
+++ b/unhrc.html
@@ -63,9 +63,9 @@
 					<p style="font-size: 1.25em">
 						<b>“Victims deserve justice, peace requires justice”</b>
 					</p>
-					<p style="font-size: 1.25em;">
+					<!-- <p style="font-size: 1.25em;">
 						<b>-Bernard Baruch.</b>
-					</p>
+					</p> -->
 					<p style="font-size: 1.15em">
 						"A privileged man's ignorance, is marginalized man's grave." Injustice, poverty, social and cultural boycott,
 lack of opportunities and non-dominant social identities; these are the several problems marginalized
