--- a/unhrc.html
+++ b/unhrc.html
@@ -61,11 +61,11 @@
 								<div style="text-align: center;">
 									<h2>United Nations Human Rights Council</h2>
 					<p style="font-size: 1.25em">
-						<b>“Victims deserve justice, peace requires justice”</b>
+						<b>“Injustice anywhere is a threat to justice everywhere”</b>
 					</p>
-					<!-- <p style="font-size: 1.25em;">
-						<b>-Bernard Baruch.</b>
-					</p> -->
+					<p style="font-size: 1.25em;">
+						<b>Martin Luther King</b>
+					</p>
 					<p style="font-size: 1.15em">
 						"A privileged man's ignorance, is marginalized man's grave." Injustice, poverty, social and cultural boycott,
 lack of opportunities and non-dominant social identities; these are the several problems marginalized
