--- a/unhrc.html
+++ b/unhrc.html
@@ -64,7 +64,7 @@
 						<b>“Injustice anywhere is a threat to justice everywhere”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>Martin Luther King</b>
+						<b>-Martin Luther King</b>
 					</p>
 					<p style="font-size: 1.15em">
 						"A privileged man's ignorance, is marginalized man's grave." Injustice, poverty, social and cultural boycott,
