--- a/credits.html
+++ b/credits.html
@@ -42,7 +42,7 @@
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
-						<li><a href="credits.html">Credits</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
@@ -54,7 +54,7 @@
 					<div class="container">
 						<header class="major">
 							<center><a href="#" class="image fit"><img src="logo.png" style="border-radius: 50%; width: 15em; height: 15em; border: 2px solid gold !important;" alt=""/></a></center>
-							<h2>CREDITS</h2>
+							<h2>TECH-TEAM</h2>
 						</header>
 
 						<!-- Content -->
@@ -62,7 +62,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/ara.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/ara.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em sans-serif;  color:white">HEAD OF TECH</h1>
 												<p style = "font: 2em perpetua; color: white;">Aravind Sreenath</p> 
@@ -74,21 +74,8 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/tarunK.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/aniii copy 2.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
-												<p style = "font: 2em perpetua; color: white;">Tarun K</p> 
-											</p>
-										</div>
-									</a>
-		
-								</article>
-								<article>
-									<a >
-										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/aniii copy 2.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
-											<p>
-												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
 											</p>
 										</div>
@@ -98,10 +85,20 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/parthK.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/parthK.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Parth K Dubal</p> 
+											</p>
+										</div>
+									</a>
+									
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/tarunK.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<p>
+												<p style = "font: 2em perpetua; color: white;">Tarun K</p> 
 											</p>
 										</div>
 									</a>
@@ -110,9 +107,8 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/yashA.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/yashA.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Yash Aanand</p> 
 											</p>
 										</div>
