--- a/eb.html
+++ b/eb.html
@@ -42,12 +42,11 @@
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
-						<li><a href="credits.html">Credits</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
             </header>
-
 			<!-- Main -->
 				<div id="main" class="wrapper style1" style="font-family: perpetua;">
 					<div class="container">
@@ -101,7 +100,7 @@
 											<img src="./images/shambhavi.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
-												<p style = "font: 2em perpetua; color: white;">Shambhavi A U M</p> 
+												<p style = "font: 2em perpetua; color: white;">Shambhavi A Mustapure</p> 
 											</p>
 										</div>
 									</a>
