--- a/fcc.html
+++ b/fcc.html
@@ -18,8 +18,8 @@
 
 			<!-- Header -->
             <header id="header">
-				<h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
-				<nav id="nav">
+                <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                <nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
@@ -42,11 +42,11 @@
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
-						<li><a href="credits.html">Credits</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
-			</header>
+            </header>
 
 			<!-- Main -->
 				<div style="font-family: perpetua;" id="main" class="wrapper style1">
@@ -95,7 +95,7 @@ strength to unite when faced with the consequences of the dark side of science?
 								<img src="./images/neha.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
-									<p style = "font: 2em perpetua; color:white" >Neha Hemadri</p> 
+									<p style = "font: 2em perpetua; color:white" >Neha D Hemadri</p> 
 
 								</p>
 							</div>
@@ -121,7 +121,7 @@ strength to unite when faced with the consequences of the dark side of science?
 									<img src="./images/nikil.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
-										<p style = "font: 2em perpetua; color:white">Nikhil Atreya</p> 
+										<p style = "font: 2em perpetua; color:white">Nikhil Athreya P</p> 
 									</p>
 								</div>
 							</a>
