--- a/index.html
+++ b/index.html
@@ -210,36 +210,36 @@
 		<div id="page-wrapper">
 
 		
-				<header id="header">
-					<h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Committees</a>
-								<ul>
-									<li><a href="unem.html">UNEM </a></li>
-									<li><a href="unhrc.html">UNHRC</a></li>
-									<li><a href="aippm.html">AIPPM</a></li>
-									<li><a href="fcc.html">FCC</a></li>
-									<li><a href="ipc.html">IPC</a></li>
-								</ul>
-							</li>
-							<li><a href="eb.html">Secretariat</a></li>
-							<li>
-								<a href="#">Delegate Materials</a>
-								<ul>
-									<li><a href="#">Delegate Handbook</a></li>
-									<li><a href="#">Background Guides</a></li>
-									<li><a href="#">Matrix</a></li>
-								</ul>
-							</li>
-							<li><a href="contactus.html">Contact Us</a></li>
-							<li><a href="credits.html">Credits</a></li>
-							<li><a href="#" class="button primary">REGISTRATION</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+                <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                <nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li>
+							<a href="#">Committees</a>
+							<ul>
+								<li><a href="unem.html">UNEM </a></li>
+								<li><a href="unhrc.html">UNHRC</a></li>
+								<li><a href="aippm.html">AIPPM</a></li>
+								<li><a href="fcc.html">FCC</a></li>
+								<li><a href="ipc.html">IPC</a></li>
+							</ul>
+						</li>
+						<li><a href="eb.html">Secretariat</a></li>
+						<li>
+							<a href="#">Delegate Materials</a>
+							<ul>
+								<li><a href="#">Delegate Handbook</a></li>
+								<li><a href="#">Background Guides</a></li>
+								<li><a href="#">Matrix</a></li>
+							</ul>
+						</li>
+						<li><a href="contactus.html">Contact Us</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
+						<li><a href="#" class="button primary">REGISTRATION</a></li>
+					</ul>
+				</nav>
+            </header>
 
 			<!-- Banner -->
 			<div style="font-family: perpetua;">
@@ -260,7 +260,7 @@
 									<br>August 2022</strong></p>
 							</p>
 						</center>
-						<p style="font-family: perpetua;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. Capable of both inflicting injury, and remedying it. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; - Albus Dumbledore</b></p>
+						<p style="font-family: perpetua; font-size: 24px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. Capable of both inflicting injury, and remedying it. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; - Albus Dumbledore</b></p>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -273,14 +273,14 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2><img src="images/npslogo.png" alt="" /><br>WHAT IS R-NPSMUN</h2>
-										<p>NPS Rajajinagar proudly presents to you the sixth edition of R-NPSMUN!</p>
+										<p style="font-size: 26px;">NPS Rajajinagar proudly presents the sixth edition of R-NPSMUN!</p>
 									</header>
 								</div>
-								<div class="col-4 col-12-medium"">
-									<p>An amalgamation of the consistent committees fused with a few unconventional ones, we have ensured that each delegate, new or experienced, has something to look forward to. Delegates will have to think on their feet to keep up with the pace of the debate, combating the obstacles posed, while sticking to the portfolios represented.</p>
+								<div class="col-4 col-12-medium" style="font-size: 26px;">
+									<p>An amalgamation of consistent committees fused with a few unconventional ones, we have ensured that each delegate, new or experienced, has something to look forward to. Delegates will have to think on their feet to keep up with the pace of the debate, combating the obstacles posed, while sticking to the portfolios represented.</p>
 								</div>
-								<div class="col-4 col-12-medium">
-									<p>Alliances will be made, strategies devised, while keeping the nations’ best interests at heart. Factual knowledge along with rational arbitrations will sail you through! So delegates, come be a part of this exhilarating experience!</p>
+								<div class="col-4 col-12-medium" style="font-size: 26px;">
+									<p>Alliances will be made, strategies devised, while keeping the nations’ best interests at heart. Factual knowledge along with rational arbitrations will help sail you through! So delegates, come be a part of this exhilarating experience!</p>
 								</div>
 							</div>
 						</div>
@@ -292,7 +292,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Secretary General of RNPSMUN 2022</h2>
-						<img src="images/dhruthiD.jpeg" style="border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;">Presenting to you, Dhruti Deshpande!</p><br>
+						<img src="images/dhruthiD.jpeg" style="border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;"> Dhruti Deshpande!</p><br>
 					</header>
 					
 					<footer class="major">
@@ -328,7 +328,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Director General of RNPSMUN 2022</h2>
-						<img src="images/VishalRao.jpeg" style="border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Presenting to you, Vishal Rao!</p><br>
+						<img src="images/VishalRao.jpeg" style="border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Vishal Rao</p><br>
 					</header>
 					
 					<footer class="major">
@@ -363,8 +363,7 @@
 						<div class="container">
 							<header class="major">
 								<h2>The Schedule</h2>
-								<p>Here's what you will be doing</p>
-								<p>Reportiing time: 8:15 am</p>
+								<p>Reportiing time: 8:30 am</p>
 							</header>
 	
 							<!-- Content -->
@@ -379,7 +378,7 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>8:45 am - 9:15 am</td>
+												<td>9:00 am - 9:15 am</td>
 												<td>Opening Ceremony</td>
 											</tr>
 											<tr>
