--- a/unem.html
+++ b/unem.html
@@ -17,9 +17,9 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-            <header id="header">
-				<h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
-				<nav id="nav">
+			<header id="header">
+                <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                <nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
@@ -42,11 +42,11 @@
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
-						<li><a href="credits.html">Credits</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
-			</header>
+            </header>
 
 			<!-- Main -->
 				<div style="font-family: perpetua;" id="main" class="wrapper style1">
