--- a/unhrc.html
+++ b/unhrc.html
@@ -18,8 +18,8 @@
 
 			<!-- Header -->
             <header id="header">
-				<h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
-				<nav id="nav">
+                <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                <nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
@@ -42,12 +42,11 @@
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
-						<li><a href="credits.html">Credits</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
-			</header>
-
+            </header>
 			<!-- Main -->
 				<div style="font-family:perpetua" id="main" class="wrapper style1">
 					<div class="container">
@@ -67,7 +66,7 @@
 						<b>-Martin Luther King</b>
 					</p>
 					<p style="font-size: 1.15em">
-						"A privileged man's ignorance, is marginalized man's grave." Injustice, poverty, social and cultural boycott,
+						"A privileged man's ignorance, is a marginalized man's grave." Injustice, poverty, social and cultural boycott,
 lack of opportunities and non-dominant social identities; these are the several problems marginalized
 communities like the LGBTQI+ community, migrants and refugees, women and girls, ethnic minorities
 face. The UNHRC will be focusing on how to resolve these problems, and it aims to help create an
@@ -106,7 +105,7 @@ equitable, just and sustainable society
 									<img src="./images/muktha.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white"> CO-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Mukta G</p> 
+										<p style="font: 2em perpetua; color: white;">Mukta Gangadhar</p> 
 									</p>
 								</div>
 							</a>
@@ -118,7 +117,7 @@ equitable, just and sustainable society
 									<img src="./images/diya.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Diya Madhu</p> 
+										<p style="font: 2em perpetua; color: white;">Diya C Madhu</p> 
 									</p>
 								</div>
 							</a>
