--- a/contactus.html
+++ b/contactus.html
@@ -21,36 +21,36 @@
                 <div id="page-wrapper">
         
                     <!-- Header -->
-                        <header id="header">
-                            <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
-                            <nav id="nav">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>
-                                        <a href="#">Committees</a>
-                                        <ul>
-                                            <li><a href="unem.html">UNEM </a></li>
-                                            <li><a href="unhrc.html">UNHRC</a></li>
-                                            <li><a href="aippm.html">AIPPM</a></li>
-                                            <li><a href="fcc.html">FCC</a></li>
-                                            <li><a href="ipc.html">IPC</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="eb.html">Secretariat</a></li>
-                                    <li>
-                                        <a href="#">Delegate Materials</a>
-                                        <ul>
-                                            <li><a href="#">Delegate Handbook</a></li>
-                                            <li><a href="#">Background Guides</a></li>
-                                            <li><a href="#">Matrix</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contactus.html">Contact Us</a></li>
-                                    <li><a href="credits.html">Credits</a></li>
-                                    <li><a href="#" class="button primary">REGISTRATION</a></li>
-                                </ul>
-                            </nav>
-                        </header>
+                    <header id="header">
+                        <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                        <nav id="nav">
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li>
+                                    <a href="#">Committees</a>
+                                    <ul>
+                                        <li><a href="unem.html">UNEM </a></li>
+                                        <li><a href="unhrc.html">UNHRC</a></li>
+                                        <li><a href="aippm.html">AIPPM</a></li>
+                                        <li><a href="fcc.html">FCC</a></li>
+                                        <li><a href="ipc.html">IPC</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="eb.html">Secretariat</a></li>
+                                <li>
+                                    <a href="#">Delegate Materials</a>
+                                    <ul>
+                                        <li><a href="#">Delegate Handbook</a></li>
+                                        <li><a href="#">Background Guides</a></li>
+                                        <li><a href="#">Matrix</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="contactus.html">Contact Us</a></li>
+                                <li><a href="credits.html">Tech Team</a></li>
+                                <li><a href="#" class="button primary">REGISTRATION</a></li>
+                            </ul>
+                        </nav>
+                    </header>
         
 
                         <section id="wrapper" style="text-align: center">
@@ -91,7 +91,7 @@
                                             </tr>
                                     <tr style="text-align: justify">
                                         <td>HEAD OF ORGANISING COMMITTEE</td>
-                                        <td>SHAMBHAVI MUSTAPURE<BR>
+                                        <td>SHAMBHAVI A MUSTAPURE<BR>
                                                 <BR>DHRUTI KEDILAYA
                                         </td>						
                                         <TD>+91 95354 64786 <BR><BR>+91 75068 83733</a> </TD>
