--- a/ipc.html
+++ b/ipc.html
@@ -17,9 +17,9 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-            <header id="header">
-				<h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
-				<nav id="nav">
+			<header id="header">
+                <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                <nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
@@ -42,11 +42,11 @@
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
-						<li><a href="credits.html">Credits</a></li>
+						<li><a href="credits.html">Tech Team</a></li>
 						<li><a href="#" class="button primary">REGISTRATION</a></li>
 					</ul>
 				</nav>
-			</header>
+            </header>
 
 			<!-- Main -->
 				<div style="font-family: perpetua;" id="main" class="wrapper style1">
@@ -91,7 +91,7 @@ topic of censorship and bias.
 								<img src="./images/abhishek.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">HEAD OF PRESS</h1>
-									<p style = "font: 2em perpetua;; color:white">Abhishek S</p> 
+									<p style = "font: 2em perpetua;; color:white">Abhishek Srinivasan</p> 
 								</p>
 							</div>
 						</a>
@@ -116,7 +116,7 @@ topic of censorship and bias.
 								<img src="./images/yati.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">SECRETARY OF PRESS</h1>
-									<p style = "font: 2em perpetua; color:white">Yati Patil</p> 
+									<p style = "font: 2em perpetua; color:white">Yati S Patil</p> 
 
 								</p>
 							</div>
