some more changes

--- a/index.html
+++ b/index.html
@@ -296,7 +296,17 @@
 					</header>
 					
 					<footer class="major">
-						<p>Enter description here</p>
+						<p>“Only a few know, how much one must know to know how little he knows” -Werner
+							Heisenberg
+							Hardworking, determined, and deeply insightful, Dhruti is usually found engaging animatedly in
+							spirited conversations. With her love for facts and greater love for rhetoric, she’ll make sure that
+							she’s one step ahead of the rest with her methodical strategizing and impeccable research, and
+							will certainly leave you confused if she cannot convince you. She also feels that most of the
+							world’s problems can be solved by asking the right questions and having a logical approach.
+							When not swimming or MUNing, you might find her reading a captivating book on Indian
+							history (or just rereading Harry Potter!) or researching the latest scientific developments. An
+							amiable and friendly person, she’ll certainly get along with you as long as you have an aversion
+							for Comic Sans too, and will make sure that you have an exhilarating and fun-filled conference!</p>
 						<ul class="actions special">
 							<li><a class="button" id="myBtn" class="special">LETTER FROM THE SECRETARY GENERAL</a></li>
 							<div id="myModal" class="modal">
@@ -345,7 +355,7 @@
 									<p align="left">Greetings, Delegates!<br><br>
 										&emsp;&emsp;&emsp; It is my honour and privilege to welcome every one of you to the sixth installment of RNPS MUN. As is tradition, we plan to raise the standard yet again, and make this year’s MUN the best we’ve held so far. To write off this MUN as just another inter-school event would not be doing it justice. Our Secretariat and EB have worked tirelessly to make every moment of this MUN an incredible experience.
 										With five amazing committees, you really can’t make a wrong choice. Veteran debater or first timer, you’re guaranteed to find a committee for you. In accordance with our past standards, RNPS MUN will not let you down.</p>
-									<p align="left">In the present state of the world, the importance of MUN is more apparent than ever. The need to speak out and make your opinion heard is ever-growing in this environment of uncertainty and turmoil. A MUN puts a loudspeaker behind your voice, and breathes a new life into your words. Winning is important, yes. But the true worth of a MUN lies in the memories and knowledge you walk away with. So, dive headfirst into three days of rigorous debate, deliberation, press conferences and crises. The future is in our hands, and it’s time to prove ourselves worthy of that mantle. And as always, may the best delegate win.</p>
+									<p align="left">In the present state of the world, the importance of MUN is more apparent than ever. The need to speak out and make your opinion heard is ever-growing in this environment of uncertainty and turmoil. A MUN is a loudspeaker for your voice, and breathes new life into your words. Winning is important, yes. But the true worth of a MUN lies in the memories and knowledge you walk away with. So, dive headfirst into three days of rigorous debate, deliberation, press conferences and crises. The future is in our hands, and it’s time to prove ourselves worthy of that mantle. And as always, may the best delegate win.</p>
 								  </div>
 								  <div class="modal-footer">
 									<h3>-Vishal Rao</h3>
@@ -363,7 +373,7 @@
 						<div class="container">
 							<header class="major">
 								<h2>The Schedule</h2>
-								<p>Reportiing time: 8:30 am</p>
+								<p>Reporting time for Inaugural: 8:30 am</p>
 							</header>
 	
 							<!-- Content -->
