--- a/aippm.html
+++ b/aippm.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-AIPPM</title>
+		<title>RNPSMUN 2022</title>
 		<link rel="icon" type="image/x-icon" href="./images/comlog/aippm.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -27,7 +27,7 @@
 							<ul>
 								<li><a href="unem.html">UNEM </a></li>
 								<li><a href="unhrc.html">UNHRC</a></li>
-								<li><a href="aippm.html">AIPPM</a></li>
+								<li><a href="aippm.html">ICA</a></li>
 								<li><a href="fcc.html">FCC</a></li>
 								<li><a href="ipc.html">IPC</a></li>
 							</ul>
@@ -59,7 +59,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>All India Political Parties Meet</h2>
+									<h2>Constituent Assembly of 1948  </h2>
 					<p style="font-size: 1.25em">
 						<b>“I have come to this conclusion that there is only one country in the world which understands religion - It is India”</b>
 					</p>
@@ -99,7 +99,7 @@ And above all, how are we to progress as a nation amidst this environment of ani
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/praj.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
+									<h1 style="font: 1em perpetua;  color:white">SPEAKER</h1>
 									<p style = "font: 2em perpetua; color:white" >Prajwal R</p> 
 								</p>
 							</div>
@@ -111,7 +111,7 @@ And above all, how are we to progress as a nation amidst this environment of ani
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/ananth.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em perpetua;  color:white">VICE - CHAIR</h1>
+										<h1 style="font: 1em perpetua;  color:white">CO-DEPUTY SPEAKER</h1>
 
 										<p style = "font: 2em perpetua; color:white">Ananthashreyas Nair</p>
 
@@ -126,7 +126,7 @@ And above all, how are we to progress as a nation amidst this environment of ani
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/yash2.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em perpetua;  color:white">MODERATOR</h1>
+										<h1 style="font: 1em perpetua;  color:white">CO-DEPUTY SPEAKER</h1>
 
 										<p style = "font: 2em perpetua; color:white">Yashaswini Sirwar</p> 
 
