--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 				</section>
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>-->
 					<div class="content">
 						<div class="container">
 							<div class="row">
