--- a/credits.html
+++ b/credits.html
@@ -27,7 +27,7 @@
 							<ul>
 								<li><a href="unem.html">UNEM </a></li>
 								<li><a href="unhrc.html">UNHRC</a></li>
-								<li><a href="aippm.html">ICA</a></li>
+								<li><a href="ica.html">ICA</a></li>
 								<li><a href="fcc.html">FCC</a></li>
 								<li><a href="ipc.html">IPC</a></li>
 							</ul>
