--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 							<ul>
 								<li><a href="unem.html">UNEM </a></li>
 								<li><a href="unhrc.html">UNHRC</a></li>
-								<li><a href="aippm.html">AIPPM</a></li>
+								<li><a href="ica.html">ICA</a></li>
 								<li><a href="fcc.html">FCC</a></li>
 								<li><a href="ipc.html">IPC</a></li>
 							</ul>
