--- a/ica.html
+++ b/ica.html
@@ -52,7 +52,7 @@
 				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
-						<span class="image"><img src="./images/comlog/aippm.jpg" alt="" style="border-radius: 50%; width: 18em; height: 18em; border: 2px solid gold !important;"/></span>
+						<span class="image"><img src="./images/ica.png" alt="" style="border-radius: 50%; width: 18em; height: 18em; border: 2px solid gold !important;"/></span>
 					</div>
 						<header class="major">
 						</header>
