--- a/ica.html
+++ b/ica.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022</title>
+		<title>RNPSMUN 2022-ICA</title>
 		<link rel="icon" type="image/x-icon" href="./images/comlog/aippm.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
