--- a/ica.html
+++ b/ica.html
@@ -59,7 +59,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Constituent Assembly of 1948  </h2>
+									<h2>Indian Constituent Assembly of 1948  </h2>
 					<p style="font-size: 1.25em">
 						<b>“I have come to this conclusion that there is only one country in the world which understands religion - It is India”</b>
 					</p>
