--- a/ica.html
+++ b/ica.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>RNPSMUN 2022-ICA</title>
-		<link rel="icon" type="image/x-icon" href="./images/comlog/aippm.jpg">
+		<link rel="icon" type="image/x-icon" href="./images/ipa.png.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
