--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 					</header>
 					
 					<footer class="major">
-						<p>“Only a few know, how much one must know to know how little he knows” -Werner
-							Heisenberg
+						<p style="font-size:125%;">“Only a few know, how much one must know to know how little he knows” -Werner
+							Heisenberg <br>
 							Hardworking, determined, and deeply insightful, Dhruti is usually found engaging animatedly in
 							spirited conversations. With her love for facts and greater love for rhetoric, she’ll make sure that
 							she’s one step ahead of the rest with her methodical strategizing and impeccable research, and
@@ -342,7 +342,7 @@
 					</header>
 					
 					<footer class="major">
-						<p>Competitive, driven, and fun-loving, there's nothing Vishal finds more interesting than the unknown. With his quick wit and ability to think on his feet, Vishal tends to gravitate towards chaos, then breaks it down with razor sharp reasoning and deduction to arrive at the most logical outcome. But the real fun for Vishal lies in not knowing what comes next, and having to rely only on yourself to come out on top no matter what the situation. His position as School Prefect is a testament to his friendly and approachable nature as well as his leadership qualities. When he isn't actively involved in achieving world domination, he can often be found playing piano, basketball or watching anime. With Vishal serving as this RNPS-MUN's Director General, you can be assured of an incredible and electrifying conference. So, veterans and first timers alike, get ready for three days of fast-paced and stimulating debate that will truly test your limits and push the boundaries of the standard for a high school debate.</p>
+						<p style="font-size:125%;">Competitive, driven, and fun-loving, there's nothing Vishal finds more interesting than the unknown. With his quick wit and ability to think on his feet, Vishal tends to gravitate towards chaos, then breaks it down with razor sharp reasoning and deduction to arrive at the most logical outcome. But the real fun for Vishal lies in not knowing what comes next, and having to rely only on yourself to come out on top no matter what the situation. His position as School Prefect is a testament to his friendly and approachable nature as well as his leadership qualities. When he isn't actively involved in achieving world domination, he can often be found playing piano, basketball or watching anime. With Vishal serving as this RNPS-MUN's Director General, you can be assured of an incredible and electrifying conference. So, veterans and first timers alike, get ready for three days of fast-paced and stimulating debate that will truly test your limits and push the boundaries of the standard for a high school debate.</p>
 						<ul class="actions special">
 							<li><a class="button" id="myBtn2" class="special">LETTER FROM THE DIRECTOR GENERAL</a></li>
 							<div id="myModal2" class="modal">
