Some speech change

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							Hardworking, determined, and deeply insightful, Dhruti is usually found engaging animatedly in
 							spirited conversations. With her love for facts and greater love for rhetoric, she’ll make sure that
 							she’s one step ahead of the rest with her methodical strategizing and impeccable research, and
-							will certainly leave you confused if she cannot convince you. She also feels that most of the
+							will certainly leave you rethinking everything you said even if she cannot convince you. She also feels that most of the
 							world’s problems can be solved by asking the right questions and having a logical approach.
 							When not swimming or MUNing, you might find her reading a captivating book on Indian
 							history (or just rereading Harry Potter!) or researching the latest scientific developments. An
