--- a/ipc.html
+++ b/ipc.html
@@ -36,7 +36,7 @@
 						<li>
 							<a href="#">Delegate Materials</a>
 							<ul>
-								<li><a href="https://docs.google.com/document/d/1iiykK4rUJ_Q0Lp0_xWeHM7YigA-KFRFoWEoHT7nuZu0/edit?usp=sharing">Delegate Handbook</a></li>
+								<li><a href="./assets/pdfs/DH.pdf">Delegate Handbook</a></li>
 								<li><a href="#">Background Guides</a></li>
 								<li><a href="#">Matrix</a></li>
 							</ul>
