--- a/ica.html
+++ b/ica.html
@@ -59,23 +59,15 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Indian Constituent Assembly of 1948  </h2>
+									<h2>Indian Constituent Assembly of 1948 (Semi-Crisis)  </h2>
 					<p style="font-size: 1.25em">
-						<b>“I have come to this conclusion that there is only one country in the world which understands religion - It is India”</b>
+						<b>“She (Bharat Maa) wears a garland of warriors to look beautiful, who is worshiped by the best scholars. Sung daily through Vedas and Puranas, salutations to such (Maa Bharati) who looks gorgeous with patriots.”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Swami Vivekananda</b>
+						<b>-Vishnu Purana</b>
 					</p>
 					<p style="font-size: 1.15em">
-						The driving force behind the glory of the nation we call Bharat is an idea. An idea that has existed for
-thousands of years, allowing countless people to live the way they see fit, without fear.
-That idea, is tolerance.
-But as the years have passed and the patience of our people has run dry, a dark cloud looms over the future
-of this country.
-So RNPS MUN calls out to you, delegates, to answer the burning questions:
-Is our nation truly tolerant of all religions? Can we confidently say that we, as a country, accept all people
-as they are irrespective of their faiths and beliefs?
-And above all, how are we to progress as a nation amidst this environment of animosity and prejudice?
+						It is the year 1948. Bharat has just “awoken to life and freedom.” But independence is just the first step. There is still a long way to go before we truly become the nation our ancestors envisioned. Drafting the constitution is one essential step in the right direction to becoming a unified nation and reclaiming our glorious history. So, delegates! It is now in your hands to decide the fate of Bharat, and live up to the expectations of our predecessors while also securing a country for the generations to come.
 
 					</p>
 									
@@ -84,7 +76,7 @@ And above all, how are we to progress as a nation amidst this environment of ani
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em">
-						Communal Intolerance With Special Reference To Religious And Political Intolerance
+						Framing the foundation for the future of India 
 					</p>
 
 								</div>
