--- a/ica.html
+++ b/ica.html
@@ -59,7 +59,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Indian Constituent Assembly of 1948 (Semi-Crisis)  </h2>
+									<h2>Indian Constituent Assembly of 1948</h2>
 					<p style="font-size: 1.25em">
 						<b>“She (Bharat Maa) wears a garland of warriors to look beautiful, who is worshiped by the best scholars. Sung daily through Vedas and Puranas, salutations to such (Maa Bharati) who looks gorgeous with patriots.”</b>
 					</p>
