--- a/index.html
+++ b/index.html
@@ -499,11 +499,11 @@
 										href='unhrc.html'>United Nations Human Rights Council</h1>
 								</div>
 							</a><br>
-							<a href='aippm.html'>
+							<a href='ica.html'>
 									<div style="border-radius: 100%; text-align: center">
-										<img src="./images/comlog/aippm.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
+										<img src="./images/ipa.png.png" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 										<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
-											href='aippm.html'>All India Political Meet</h1>
+											href='aippm.html'>Indian Constituent Assembly of 1948</h1>
 									</div>
 							</a><br>
 							<a href='fcc.html'>
