--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
 						<li><a href="credits.html">Tech Team</a></li>
-						<li><a href="#" class="button primary">REGISTRATION</a></li>
+						<li><a href="#" class="button primary disabled">REGISTRATION</a></li>
 					</ul>
 				</nav>
             </header>
