--- a/index.html
+++ b/index.html
@@ -278,7 +278,10 @@ setInterval('updateTimer()', 1000);
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
 						<li><a href="credits.html">Tech Team</a></li>
-						<li><a href="#" class="button primary disabled">REGISTRATION</a></li>
+						<li><a href="#" class="button primary">REGISTRATION</a><ul>
+							<li><a href="#">REGISTRATION </a></li>
+							<li><a href="#">REGISTRATION FOR NPS-RNR</a></li>
+						</ul></li>
 					</ul>
 				</nav>
             </header>
