--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ setInterval('updateTimer()', 1000);
 						padding: 70px 50px;
 						font-family: sans-serif;
 						font-weight: lighter;"></div>
-						<p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. Capable of both inflicting injury, and remedying it. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; - Albus Dumbledore</b></p>
+						<center><p style="font-family: perpetua; font-size: 34px;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. <br>Capable of both inflicting injury, and remedying it. <br> - Albus Dumbledore</b></p></center>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
