--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ setInterval('updateTimer()', 1000);
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<div id="page-wrapper">
-					<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>-->
+					<span class="image fit main"><img src="images/navybluegradient.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
