--- a/unhrc.html
+++ b/unhrc.html
@@ -37,8 +37,26 @@
 							<a href="#">Delegate Materials</a>
 							<ul>
 								<li><a href="./assets/pdfs/DH.pdf">Delegate Handbook</a></li>
-								<li><a href="#">Background Guides</a></li>
-								<li><a href="#">Matrix</a></li>
+								<li>
+									<a href="#">Background Guides</a>
+									<ul>
+										<li><a href="unem.html">UNEM </a></li>
+										<li><a href="unhrc.html">UNHRC</a></li>
+										<li><a href="ica.html">ICA</a></li>
+										<li><a href="fcc.html">FCC</a></li>
+										<li><a href="ipc.html">IPC</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Matrix</a>
+									<ul>
+										<li><a href="unem.html">UNEM </a></li>
+										<li><a href="unhrc.html">UNHRC</a></li>
+										<li><a href="ica.html">ICA</a></li>
+										<li><a href="fcc.html">FCC</a></li>
+										<li><a href="ipc.html">IPC</a></li>
+									</ul>
+								</li>
 							</ul>
 						</li>
 						<li><a href="contactus.html">Contact Us</a></li>
